--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="Css/Commun.css" type="text/css">
 </head>
 <body>
-    
+    <header>
+        <table>
+            <th>
+                <td><img src="Images/Laptop logo.png" alt="Photo du logo"></td>
+                <td>ÉvÉnements</td>
+                <td>Offres</td>
+                <td>Services</td>
+                <td>Contact nous</td>
+                <td><img src="Images/Connexion icon.png" alt="Photo du icon de Connexion">compte</td>
+            </th>
+        </table>
+    </header>
 </body>
 </html>
