Modifications fait sur les hyperliens pour les pages html Categories

--- a/Index.html
+++ b/Index.html
@@ -27,8 +27,8 @@
         <td><img src="Images/Photo Catégorie2.jpg" alt="Photo des écouteurs avec fil" width="600" height="300"></td>
         </th>
         <tr>
-            <td><a href="Categorie1.html"></td>
-            <td><a href="Categorie2.html"></td>
+            <td><a href="Categorie1.html"><br>Écouteurs sans fil</br></td>
+            <td><a href="Categorie2.html"><br>Écouteurs avec fil</br></td>
         </tr>
     </table>
 </body>
