--- a/html/Categorie1.html
+++ b/html/Categorie1.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categorie1</title>
     <link rel="stylesheet" href="Css/Commun.css" type="text/css">
 </head>
+
 <body>
-    <h1></h1>
+    <h1>Écouteurs sans fil</h1>
+    <table>
+        <th>
+        <td><img src="Images/Prod1.jpg" alt="Photo d'écouteurs"></td>
+        <td><a href="Prod1.html"><br>Casque d'écoute Bluetooth à suppression du
+                bruit Studio3 de Beats by Dr. Dre - Noir - Rouge</br></td>
+        <td><img src="Images/Prod2.jpg" alt="Photo d'écouteurs"></td>
+        <td><a href="Prod2.html"><br>Écouteurs boutons 100 % sans fil à suppression du
+                bruit Studio Buds de Beats by Dr. Dre - Blanc</br></a></td>
+        </th>
+    </table>
 </body>
+
 </html>
