Création d'un tableau qui presente les deux produits de cette categorie et les hyperliens qui dirigera l'utilisateur vers les pages Prod3 et Prod4 avec des images

--- a/html/Categorie2.html
+++ b/html/Categorie2.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="Css/Commun.css" type="text/css">
 </head>
 <body>
-    
+    <h1>Écouteurs filaires</h1>
+    <table>
+        <th>
+        <td><img src="Images/Prod3.jpg" alt="Photo d'écouteurs"></td>
+        <td><a href="Prod3.html"><br>Casque d'écoute de Sony (MDRZX310APW) - Blanc</br></td>
+        <td><img src="Images/Prod4.jpg" alt="Photo d'écouteurs"></td>
+        <td><a href="Prod4.html"><br>Casque d'écoute Jr310 de JBL - Rouge</br></td>
+        </th>
+    </table>
 </body>
 </html>
