--- a/html/Categorie1.html
+++ b/html/Categorie1.html
@@ -9,6 +9,18 @@
 </head>
 
 <body>
+    <header>
+        <table>
+            <th>
+            <td><img src="Images/Laptop logo.png" alt="Photo du logo" width="200" height="200"></td>
+            <td>Événements</td>
+            <td>Offres</td>
+            <td>Services</td>
+            <td>Contact nous</td>
+            <td><img src="Images/Connexion icon.png" alt="Photo du icon de Connexion" width="70" height="70">compte</td>
+            </th>
+        </table>
+    </header>
     <h1>Écouteurs sans fil</h1>
     <table>
         <th>
