--- a/html/Prod2.html
+++ b/html/Prod2.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="Css/Commun.css" type="text/css">
 </head>
 <body>
-    
+    <header>
+        <table>
+            <th>
+            <td><img src="Images/Laptop logo.png" alt="Photo du logo" width="200" height="200"></td>
+            <td>Événements</td>
+            <td>Offres</td>
+            <td>Services</td>
+            <td>Contact nous</td>
+            <td><img src="Images/Connexion icon.png" alt="Photo du icon de Connexion" width="70" height="70">compte</td>
+            </th>
+        </table>
+    </header>
 </body>
 </html>
