Création d'un tableau et d'une liste pour presenté le produit et ses caractéristique

--- a/html/Prod1.html
+++ b/html/Prod1.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produit1</title>
     <link rel="stylesheet" href="Css/Commun.css" type="text/css">
 </head>
+
 <body>
     <header>
         <table>
@@ -19,5 +21,39 @@
             </th>
         </table>
     </header>
+    <table>
+        <th>
+        <td><img src="Images/Prod1.jpg" alt="Photo d'écouteurs"></td>
+        </th>
+        <tr>
+            <td>
+                <h3>caractéristiques:</h3>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <ul>
+                    <li>Technologie Bluetooth permettant de diffuser du contenu audio sans
+                        fil à partir de vos appareils mobiles compatibles</li>
+                    <li>Technologie Pure Adaptive Noise Cancelling (Pure ANC)
+                        bloquant activement les bruits externes indésirables</li>
+                    <li>Calibration audio en temps réel préservant une
+                        expérience d'écoute de qualité supérieure</li>
+                    <li>Puce Apple W1 offre une autonomie efficace et
+                        une connectivité sans fil Bluetooth de classe 1</li>
+                    <li>Batterie rechargeable offrant un temps de lecture sans fil de 22 heures</li>
+                    <li>Option Fast Fuel vous donnant jusqu'à 3 heures de lecture avec un
+                        chargement de seulement 10 minutes quand la batterie est faible</li>
+                    <li>Désactivation de la technologie Pure ANC pour un mode
+                        d'économie d'énergie offrant jusqu'à 40 heures d'autonomie</li>
+                    <li>Prenez des appels, contrôlez votre musique et activez Siri
+                        avec des commandes multifonctionnelles pratiques sur l'oreillette</li>
+                    <li>Forme élégante et légère avec oreillettes moelleuses
+                        assurant un confort optimal durant les sessions d'écoute prolongées</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
 </body>
+
 </html>
