--- a/html/Prod3.html
+++ b/html/Prod3.html
@@ -19,5 +19,29 @@
             </th>
         </table>
     </header>
+    <table>
+        <th>
+        <td><img src="Images/Prod3.jpg" alt="Photo d'écouteurs"></td>
+        </th>
+        <tr>
+            <td>
+                <h3>caractéristiques:</h3>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <ul>
+                    <li>Application Smart Key pour un appareil Android plus fonctionnel</li>
+                    <li>Microphone intégré avec touche multifonctionnelle</li>
+                    <li>Haut-parleurs de 30 mm avec aimants en ferrite reproduisant 
+                        fidèlement un son dynamique à gamme complète et des graves puissantes</li>
+                    <li>Oreillettes pivotantes et repliables pour faciliter le rangement</li>
+                    <li>Oreillettes souples allégeant la pression et serre-tête rembourré pour plus de confort</li>
+                    <li>Quatre conducteurs plaqués or avec fiches en L pour une bonne connexion</li>
+                    <li>Câble plat antienchevêtrement résistant en Y de 1,2 m</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
