Création d'un tableau et d'une liste pour presenté le quatrieme produit et ses caratéristiques

--- a/html/Prod4.html
+++ b/html/Prod4.html
@@ -19,5 +19,33 @@
             </th>
         </table>
     </header>
+    <table>
+        <th>
+        <td><img src="Images/Prod3.jpg" alt="Photo d'écouteurs"></td>
+        </th>
+        <tr>
+            <td>
+                <h3>caractéristiques:</h3>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <ul>
+                    <li>Casque d'écoute doté d'oreillettes conçues sur mesure et d'un serre-tête 
+                        rembourré pour un ajustement confortable qui convient aux enfants</li>
+                    <li>Technologie avec fil utilisant une prise audio standard de 3,5 mm, 
+                        un câble antienchevêtrement et une télécommande pour un fonctionnement sans effort</li>
+                    <li>Transducteurs de 32 mm avec technologie Safe Sound de JBL produisant un son 
+                        riche tout en gardant les niveaux sonores à 85 dB ou moins pour protéger les jeunes oreilles</li>
+                    <li>Microphone intégré permettant aux enfants de discuter avec leurs amis et 
+                        d'utiliser leur voix dans des jeux et des applications éducatives</li>
+                    <li>Casque d'écoute repliable avec câble plat à un seul côté qui est très 
+                        facile à transporter pour plus de commodité durant les déplacements</li>
+                    <li>Comprend un ensemble d'autocollants de JBL pour que les enfants 
+                        puissent personnaliser leur casque d'écoute</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
